--- a/docs/userguide/database/mongo.ipynb
+++ b/docs/userguide/database/mongo.ipynb
@@ -31,13 +31,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to import module h5tbx\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "using(\"h5py\")"
@@ -50,7 +43,8 @@
    ],
    "source": [
     "import pymongo\n",
-    "from pymongo import MongoClient\n",
+    "# from pymongo import MongoClient\n",
+    "from mongomock import MongoClient  # for docs or testing only\n",
     "\n",
     "from h5rdmtoolbox import tutorial\n",
     "import h5rdmtoolbox as h5tbx\n",
@@ -79,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True)"
+       "mongomock.MongoClient('localhost', 27017)"
       ]
      },
      "execution_count": 2,
@@ -130,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_digits  # ! pip install scikit-learn\n",
+    "# ! pip install scikit-learn\n",
+    "from sklearn.datasets import load_digits\n",
     "digits = load_digits()"
    ]
   },
@@ -371,48 +366,48 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--10622454100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--10622454100\">\n",
+       "                        <input id=\"group-ds--27110242900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--27110242900\">\n",
        "                        /<span>(5)</span></label>\n",
        "                  \n",
        "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/correlation-10624425900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/correlation-10624428900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-10624428900\">correlation</label>\n",
+       "                <ul id=\"ds-1-/correlation-27113193200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/correlation-27113198300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-27113198300\">correlation</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/digit-10624600400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/digit-10624602800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/digit-10624602800\">digit</label>\n",
+       "                <ul id=\"ds-1-/digit-27113507800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/digit-27113511700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/digit-27113511700\">digit</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/dissimilarity-10624743700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/dissimilarity-10624746300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-10624746300\">dissimilarity</label>\n",
+       "                <ul id=\"ds-1-/dissimilarity-27113784800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/dissimilarity-27113788900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-27113788900\">dissimilarity</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/images-10624990400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/images-10624993000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/images-10624993000\">images</label>\n",
+       "                <ul id=\"ds-1-/images-27114260700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/images-27114264700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/images-27114264700\">images</label>\n",
        "                    <span class=\"h5tb-dims\">(digit: 1797, 8, 8) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/mean-10625123000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/mean-10625125500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/mean-10625125500\">mean</label>\n",
+       "                <ul id=\"ds-1-/mean-27114525400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/mean-27114529000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/mean-27114529000\">mean</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -723,7 +718,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x1832ed5d5b0>"
+       "<matplotlib.collections.QuadMesh at 0x253b4aeecd0>"
       ]
      },
      "execution_count": 16,
