--- a/docs/userguide/wrapper/GroupCreation.ipynb
+++ b/docs/userguide/wrapper/GroupCreation.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "source": [
     "# Group creation\n",
-    "The default group creation is not much different except that you can optionally pass attributes as a dictionary during goup initialization.\n",
+    "The default group creation is not much different, except that you can optionally pass attributes as a dictionary during group initialization.\n",
     "\n",
     "Furthermore, it is also possible to overwrite an existing group by passing `overwrite=True`.\n",
     "\n",
-    "If the group should not be overwritten but the only the attributes, pass `update_attrs=True`. Note, that this will update the existing matching attributes."
+    "If the group should not be overwritten but only the attributes, pass `update_attrs=True`. Note, that this will update the existing matching attributes."
    ]
   },
   {
@@ -80,7 +80,7 @@
    "source": [
     "# Group exploration\n",
     "\n",
-    "Sometimes it is helpful to get all all groups of a current group."
+    "Sometimes it is helpful to get all groups of a current group."
    ]
   },
   {
@@ -107,7 +107,7 @@
    "id": "ed12c8db-c9c2-4c08-80ea-8068037f562d",
    "metadata": {},
    "source": [
-    "With `recursive=True` all subgroups are returned, too, however thedefault is False."
+    "With `recursive=True` all subgroups are returned, too, however the default is `False`."
    ]
   },
   {
