clearify db interface abstractions

--- a/docs/userguide/database/hdfDB.ipynb
+++ b/docs/userguide/database/hdfDB.ipynb
@@ -388,7 +388,7 @@
     "\n",
     "HDF attribute generally are describing groups or datasets and hence are ideal to search for.\n",
     "\n",
-    "One such attribute used in the test file is \"standard_name\". The `find` methods uses a filter argument of type dictionary (`flt`), similar to MongoDB syntax. The return value will be a list of (lazy) objects:"
+    "One such attribute used in the test file is \"standard_name\". The `find` methods uses a filter argument `flt` of type dictionary, similar to MongoDB syntax. The return value will be a list of (lazy) objects:"
    ]
   },
   {
