--- a/docs/practical_examples/knowledge_graph.ipynb
+++ b/docs/practical_examples/knowledge_graph.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "#!pip install kglab"
+    "# !pip install kglab"
    ]
   },
   {
@@ -87,8 +87,8 @@
       "                \"@id\": \"_:N3\",\n",
       "                \"@type\": \"hdf5:Attribute\",\n",
       "                \"hdf5:name\": \"hint\",\n",
-      "                \"hdf5:value\": \"bah blah\",\n",
-      "                \"skos:definition\": \"A hint\"\n",
+      "                \"hdf5:value\": \"This group could be representing a person.\",\n",
+      "                \"skos:definition\": \"A hint gives helpful information on something.\"\n",
       "              },\n",
       "              {\n",
       "                \"@id\": \"_:N4\",\n",
@@ -122,8 +122,8 @@
     "    grp = h5.create_group(name='contact')\n",
     "    grp.attrs['fname', rdflib.FOAF.firstName] = 'Matthias'\n",
     "    grp.attrs['lname', rdflib.FOAF.lastName] = 'Probst'\n",
-    "    grp.attrs['hint'] = 'bah blah'\n",
-    "    grp.rdf['hint'].definition = 'A hint'\n",
+    "    grp.attrs['hint'] = 'This group could be representing a person.'\n",
+    "    grp.rdf['hint'].definition = 'A hint gives helpful information on something.'\n",
     "    grp.rdf.type = rdflib.PROV.Person  # --> rdf.type = Person\n",
     "    grp.rdf.subject = 'https://orcid.org/0000-0001-8729-0482'  # -> @id='https://orcid.org/0000-0001-8729-0482'\n",
     "\n",
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
