--- a/docs/userguide/layout/Examples.ipynb
+++ b/docs/userguide/layout/Examples.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Example Layouts\n",
     "\n",
+    "**Note, work in progress!**\n",
+    "\n",
     "This section provides useful layout specifications."
    ]
   },
@@ -15,15 +17,7 @@
    "execution_count": 1,
    "id": "41a72bcd-9e6d-4330-9f41-fd0d60ab545e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to import module h5tbx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from h5rdmtoolbox import layout\n",
     "from h5rdmtoolbox.database import hdfdb\n",
@@ -40,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "2a17a625-ca82-4db6-8c9e-2ad9f46f00e5",
    "metadata": {},
    "outputs": [],
@@ -59,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "83a7959a-d879-4f7e-9981-063ccf5ca354",
    "metadata": {},
    "outputs": [
@@ -84,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "fc671941-728f-44c5-8f7d-5399413086ac",
    "metadata": {},
    "outputs": [],
@@ -94,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "591ba3e5-015c-46d1-8c46-ecf66f3f1232",
    "metadata": {},
    "outputs": [
@@ -107,7 +101,7 @@
       "+--------------------------------------+--------+--------------------+---------------------------+---------------+---------------+-----------------------------------------+\n",
       "| id                                   |   flag | flag description   | description               | target_type   | target_name   | func                                    |\n",
       "|--------------------------------------+--------+--------------------+---------------------------+---------------+---------------+-----------------------------------------|\n",
-      "| 08d4b8c6-ce67-4a0d-be0d-7c68a353d8e1 |      1 | SUCCESSFUL         | String dataset must be 1D | Group         | /             | h5rdmtoolbox.database.hdfdb.filedb.find |\n",
+      "| 258da4da-f080-404a-bfdc-2faa6b32e60b |      1 | SUCCESSFUL         | String dataset must be 1D | Group         | tmp0.hdf      | h5rdmtoolbox.database.hdfdb.filedb.find |\n",
       "+--------------------------------------+--------+--------------------+---------------------------+---------------+---------------+-----------------------------------------+\n",
       "--> Layout is valid\n"
      ]
@@ -119,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "3c2e2739-d5b8-449a-8553-dd0ed6bfe7e4",
    "metadata": {},
    "outputs": [],
@@ -129,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "4c43c5dc-7445-45be-bed1-59eee4fc7c6d",
    "metadata": {},
    "outputs": [
@@ -139,7 +133,7 @@
        "<re.Match object; span=(0, 4), match='M123'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
