--- a/docs/userguide/misc/QueryHDFWithSPARQL.ipynb
+++ b/docs/userguide/misc/QueryHDFWithSPARQL.ipynb
@@ -1,57 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09eb5bf5-4232-4b24-8f61-58b7c2fc7621",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "42e74907-1352-47c8-a3b6-25976b5bc178",
+   "id": "cd3a682b-8538-49f9-88d2-f124125e06ab",
    "metadata": {},
    "source": [
-    "# Query using SPARQL"
+    "# Query HDF metadata with SPARQL\n",
+    "\n",
+    "Metadata in form of JSON-LD can be queried using SPARQL: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "22da4de3-1055-427e-93bb-538ad4a35aef",
+   "execution_count": 3,
+   "id": "095506ba-475e-49b5-bf24-47e4780fad06",
    "metadata": {},
    "outputs": [],
    "source": [
     "import rdflib\n",
+    "from ontolutils import SSNO, PIVMETA\n",
+    "\n",
+    "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox import jsonld"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "20db9cbb-c337-4b49-8844-ab597fac6c86",
+   "cell_type": "markdown",
+   "id": "b16ad4a3-323c-4492-bae0-9a4cb6b20913",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# with h5tbx.File(h5.hdf_filename) as h52:\n",
-    "#     h5.dump_jsonld()"
+    "Example file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "4ab1baf4-f842-4c1b-8763-793226ced95d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ontolutils import SSNO, PIVMETA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "ca42f4ca-b2e6-4c7f-92ae-e15fbc994156",
+   "execution_count": 4,
+   "id": "005a9671-2940-4745-ad7c-57acb5e7e405",
    "metadata": {},
    "outputs": [
     {
@@ -277,18 +261,18 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--1476219117000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--1476219117000\">\n",
+       "                        <input id=\"group-ds--118809566200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--118809566200\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-1476219755600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-1476219758300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-1476219758300\">u</label>\n",
+       "                <ul id=\"ds-1-/u-118813512100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-118813517800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-118813517800\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(4) [int32]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : coeff<a href=\"https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient</span></a></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a>: coeff<a href=\"https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient</span></a></li><li style=\"list-style-type: none; font-style: italic\">units: m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -312,9 +296,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "62cb9ee4-c31b-4402-9596-dda8e9899140",
+   "metadata": {},
+   "source": [
+    "Extract metadata:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "b34b383a-4a41-42c4-8db7-ed754f708659",
+   "execution_count": 6,
+   "id": "7c724298-6b08-4046-91b0-0f55b017938e",
    "metadata": {},
    "outputs": [
     {
@@ -330,23 +322,23 @@
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"_:N1\",\n",
+      "      \"@id\": \"_:N6\",\n",
       "      \"@type\": \"hdf5:File\",\n",
       "      \"hdf5:rootGroup\": {\n",
-      "        \"@id\": \"_:N0\",\n",
+      "        \"@id\": \"_:N5\",\n",
       "        \"@type\": \"hdf5:Group\",\n",
       "        \"hdf5:member\": {\n",
-      "          \"@id\": \"_:N2\",\n",
+      "          \"@id\": \"_:N7\",\n",
       "          \"@type\": \"hdf5:Dataset\",\n",
       "          \"hdf5:attribute\": [\n",
       "            {\n",
-      "              \"@id\": \"_:N3\",\n",
+      "              \"@id\": \"_:N8\",\n",
       "              \"@type\": \"hdf5:Attribute\",\n",
       "              \"hdf5:name\": \"standard_name\",\n",
       "              \"hdf5:value\": \"coeff\"\n",
       "            },\n",
       "            {\n",
-      "              \"@id\": \"_:N4\",\n",
+      "              \"@id\": \"_:N9\",\n",
       "              \"@type\": \"hdf5:Attribute\",\n",
       "              \"hdf5:name\": \"units\",\n",
       "              \"hdf5:value\": \"m/s\"\n",
@@ -382,9 +374,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13c27fb8-1297-4dda-a3b1-783886edd409",
+   "metadata": {},
+   "source": [
+    "SPARQL query:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "5005fff6-02b8-403a-a2db-b3a139d54b96",
+   "execution_count": 7,
+   "id": "47615dc8-6b13-411f-af08-6c8cd3812d3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,8 +403,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "b7acad41-aefc-4c0c-8602-d50e07d62391",
+   "execution_count": 8,
+   "id": "6163c77c-73e2-44bc-9c3a-91b00eb9cdff",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b40907-890a-4a30-a8c2-f317b1f85732",
+   "id": "5936cd61-08c1-400d-b640-0939e38dd4b9",
    "metadata": {},
    "source": [
     "Find dataset with specific standard_name:"
@@ -433,8 +433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "6c408926-9cf8-4f3a-ba87-45ffe1131de3",
+   "execution_count": 9,
+   "id": "540348e4-aae0-4f55-92bb-06f57ab925cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,8 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "e6eb1bbf-5909-4441-9ea3-9e22546a30c5",
+   "execution_count": 10,
+   "id": "0a7c2be4-d1d8-4180-a360-afb481076eee",
    "metadata": {},
    "outputs": [
     {
@@ -471,19 +471,23 @@
        "'/u'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "find_dataset_from_standard_name(h5.hdf_filename, 'https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient', 1)"
+    "find_dataset_from_standard_name(\n",
+    "    h5.hdf_filename,\n",
+    "    'https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient',\n",
+    "    limit=1\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "58391346-3b6c-48bf-9578-4fb6872dfb77",
+   "execution_count": 11,
+   "id": "24c511cc-b002-419a-ac30-b4cb0137fd3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,8 +516,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "8e062ac3-77ee-4184-b05d-f8c2c496b34f",
+   "execution_count": 12,
+   "id": "34444dda-921e-4f4c-8215-9382f6ca4fd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,29 +526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "da02a10d-e284-4c09-8ae3-79555e672e51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# jsonldstr = h5tbx.dump_jsonld(h5.hdf_filename)\n",
-    "# print(jsonldstr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "e3c2e15f-aa91-4fb2-89df-b36d08d5aea2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# g = rdflib.Graph().parse(data=jsonldstr, format='json-ld')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "df64d78b-5d93-4c6f-a32c-a58ac8e09f01",
+   "id": "89751bb0-8ced-482c-9d74-37632af850d4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -566,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
