--- a/docs/userguide/convention/ontologies.ipynb
+++ b/docs/userguide/convention/ontologies.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "HDF5 itself is considered self-describing due to the ability to store metadata (attributes) with raw data. However, this is only the prerequisite. Especially, achieving (easy) re-usability, requires standardized metadata, which is publically defined and accessible. This means, that data must be describable with persistent identifiers, as known from linked data solutions.\n",
     "\n",
-    "One solution of describing data is using controlled vocabularies or even better ontologies. In fact, an [ontology exists](\"http://purl.allotrope.org/ontologies/hdf5/1.8#\"), which allows describing the structural content of an HDF5 file (groups, datasets, attributes, properties etc.). The ``h5rdmtoolbox`` has implemented a conversion function, translating an HDF5 into a JSON-LD file. This is outlined here."
+    "One solution of describing data is using controlled vocabularies or even better ontologies. In fact, an [ontology exists](http://purl.allotrope.org/ontologies/hdf5/1.8#), which allows describing the structural content of an HDF5 file (groups, datasets, attributes, properties etc.). The ``h5rdmtoolbox`` has implemented a conversion function, translating an HDF5 into a JSON-LD file. This is outlined here."
    ]
   },
   {
@@ -614,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
