--- a/docs/userguide/misc/Visualization.ipynb
+++ b/docs/userguide/misc/Visualization.ipynb
@@ -811,7 +811,7 @@
    "source": [
     "## Vector plotting with h5rdmtoolbox and xarray\n",
     "\n",
-    "The toolbox provides a `Vector` accessory (see also [section \"Extensions\"](Extensions.ipynb])), which constructs a `xarray` dataset:"
+    "The toolbox provides a `Vector` accessory (see also [section Extensions](Extensions.ipynb))), which constructs a `xarray` dataset:"
    ]
   },
   {
