stash changes [skip ci]

--- a/docs/colab/quickstart.ipynb
+++ b/docs/colab/quickstart.ipynb
@@ -32,6 +32,7 @@
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox.repository import zenodo\n",
+    "from h5rdmtoolbox.tutorial import C\n",
     "\n",
     "print(h5tbx.__version__)\n",
     "\n",
