--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "*Any* file can be added (uploaded) by calling `upload_file(...)`. It can be a simple text, CSV or binary file. Often, it is advisable to describe the content in an additional file and hence provide more (machine-interpretable) information. Best is, to use JSON-LD files for this. The JSON-LD format allows describing file content and context in a standardized way.\n",
     "\n",
-    "One of the parameters of `upload_file(...)` is `metamapper`. It expects a function, that extracts meta information from the input file. By default, and for HDF5 files (scans for file suffixes `.hdf`, `.hdf5` and `.h5`), the built-in converter function will be called, which writes a JSON-LD file.\n",
+    "One of the parameters of `upload_file(...)` is `metamapper`. It expects a function, that extracts meta information from the input file. If the parameter `auto_map_hdf` is True and a HDF5 file is passed (scans for file suffixes `.hdf`, `.hdf5` and `.h5`), the built-in converter function will be called, which writes a JSON-LD file.\n",
     "\n",
     "By providing the `metamapper`-function, the target file and its metadata filename (which the function created) will be uploaded together.\n",
     "\n",
