--- a/docs/colab/quickstart.ipynb
+++ b/docs/colab/quickstart.ipynb
@@ -12,6 +12,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from h5rdmtoolbox import __version__\n",
+    "__version__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,11 +42,9 @@
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox.repository import zenodo\n",
-    "from h5rdmtoolbox.tutorial import C\n",
+    "from h5rdmtoolbox.tutorial import TutorialConventionZenodoRecordID\n",
     "\n",
-    "print(h5tbx.__version__)\n",
-    "\n",
-    "zenodo_repo = zenodo.ZenodoRecord(10428822)\n",
+    "zenodo_repo = zenodo.ZenodoRecord(TutorialConventionZenodoRecordID)\n",
     "cv = h5tbx.convention.from_repo(zenodo_repo, 'tutorial_convention.yaml')"
    ]
   },
@@ -381,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
