--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9bc60428-785f-41aa-a356-2114e0d183ac",
    "metadata": {},
    "outputs": [],
@@ -171,28 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "500cb79c-76a4-4f3f-a84f-da36b1e63d5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tmp0.json': {'id': '11220027-8174-4d87-9c9e-3a718536af21',\n",
-       "  'filename': 'tmp0.json',\n",
-       "  'filesize': 1074,\n",
-       "  'checksum': 'ef88b0f5be47cb450ab5fd6d91ccffeb',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/11220027-8174-4d87-9c9e-3a718536af21',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.json/content'}},\n",
-       " 'tmp0.hdf': {'id': '126ebe06-441d-47ab-9cd6-307db0e4150c',\n",
-       "  'filename': 'tmp0.hdf',\n",
-       "  'filesize': 6944,\n",
-       "  'checksum': '1169b5c09635913ac8e6606d86c40692',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/126ebe06-441d-47ab-9cd6-307db0e4150c',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.hdf/content'}}}"
+       "['tmp0.hdf', 'tmp0.jsonld']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "fbf04793-b7eb-4377-a904-edb91542b056",
    "metadata": {},
    "outputs": [],
@@ -231,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "02290359-b13b-413d-9b93-9706b3ab087d",
    "metadata": {},
    "outputs": [],
@@ -249,46 +238,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "4e75f4fc-6311-470c-9204-93c1c5d768d0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'tmp0.json': {'id': '11220027-8174-4d87-9c9e-3a718536af21',\n",
-       "  'filename': 'tmp0.json',\n",
-       "  'filesize': 1074,\n",
-       "  'checksum': 'ef88b0f5be47cb450ab5fd6d91ccffeb',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/11220027-8174-4d87-9c9e-3a718536af21',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.json/content'}},\n",
-       " 'tmp0.hdf': {'id': '5cdc2613-352c-426f-b673-bf9c2e6206cc',\n",
-       "  'filename': 'tmp0.hdf',\n",
-       "  'filesize': 6944,\n",
-       "  'checksum': '1169b5c09635913ac8e6606d86c40692',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/5cdc2613-352c-426f-b673-bf9c2e6206cc',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.hdf/content'}},\n",
-       " 'tmp0.txt': {'id': 'bc9558f1-a502-484f-b660-967cbd31697b',\n",
-       "  'filename': 'tmp0.txt',\n",
-       "  'filesize': 86,\n",
-       "  'checksum': 'fafb067c01a902a14330e5aedd4b1b0a',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/bc9558f1-a502-484f-b660-967cbd31697b',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.txt/content'}}}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp0.txt\n",
+      "tmp0.hdf\n",
+      "tmp0.jsonld\n"
+     ]
     }
    ],
    "source": [
-    "repo.get_filenames()"
+    "for file in repo.files:\n",
+    "    print(file.filename)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6982c604-3fb3-4976-9749-bc8efd1f0edd",
+   "id": "8d8df017-3d3e-469f-84da-eb848c2592dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -310,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
