use download_url for standard name table attribute value

--- a/docs/colab/quickstart.ipynb
+++ b/docs/colab/quickstart.ipynb
@@ -150,8 +150,11 @@
     "    h5.u.iri['units'].predicate = 'http://qudt.org/schema/qudt/Unit'\n",
     "    h5.u.iri['units'].object = QUDT_UNIT.M_PER_SEC\n",
     "    h5.iri['contact'].predicate = M4I.orcidId\n",
+    "    h5.iri['standard_name_table'].predicate = 'https://matthiasprobst.github.io/ssno#standardNameTable'\n",
     "\n",
-    "    h5.rdf['data_type'].definition = 'The source type of the data'  # define the meaning of the attribute with a custom text"
+    "    h5.rdf['data_type'].definition = 'The source type of the data'  # define the meaning of the attribute with a custom text\n",
+    "\n",
+    "    h5.dump()"
    ]
   },
   {
