Fixing documentation [skip ci]

--- a/docs/practical_examples/knowledge_graph.ipynb
+++ b/docs/practical_examples/knowledge_graph.ipynb
@@ -297,9 +297,7 @@
     "VIS_STYLE= {\"hdf5\": {\"color\": \"red\", \"size\": 30},\n",
     "            \"_\": {\"color\": \"black\", \"size\": 20},\n",
     "            \"prof\": {\"color\": \"green\", \"size\": 10},\n",
-    "            \"foaf\": {\"color\": \"green\", \"size\": 10},\n",
-    "            \n",
-    "           }"
+    "            \"foaf\": {\"color\": \"green\", \"size\": 10}}"
    ]
   },
   {
@@ -360,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
