--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -7,9 +7,13 @@
    "source": [
     "# Zenodo\n",
     "\n",
-    "There are two types of Zenodo interfaces. One interfaces to the public repositories (`ZenodoRecord`), the other is for testing and accessed the sandbox server (`ZenodoSandboxDeposit`).\n",
+    "The [Zenodo](https://zenodo.org/) repository is a concrete implementation of the `RepositoryInterface`. Other repositories such as `Figshare` (https://figshare.com/) could be possible future realizations of it.\n",
     "\n",
-    "The class diagram below shows how they are constructed. First, an abstract zenodo interface class (`AbstractZenodoInterface`) is derived. From this, the concrete interface classes are derived.\n",
+    "Zenodo provides a sandbox (testing environment) and a production environment. They work the same in principle. Therefore, only one implementation is needed, which is `ZenodoRecord` (the interface to a record in Zenodo). Pass `sandbox=True` to use the testing environment.\n",
+    "\n",
+    "The below diagram shows the abstract base class with its abstract methods (indicated by italics). Note, that `upload_file()` is *not* abstract. The subclasses must implement `__upload_file__`, which uploads a file to the repository record. `upload_file()` is basically a wrapper, which additionally allows generating metadata files of the uploaded files. We will explore this feature later in this section.\n",
+    "\n",
+    "The `RepositoryInterface` further defines the communication with files. A file object `RepositoryFile` is implemented, providing mandatory properties as well as a download method. A repository implementation (just like the one for Zenodo) must return a Dictionary of `RepositoryFile` objects for the `files` class property (see source code for in-depth explanation and the example at the end of this section).\n",
     "\n",
     "<img src=\"../../_static/repo_class_diagram.svg\"\n",
     "     alt=\"../../_static/repo_class_diagram.svg\"\n",
@@ -45,7 +49,7 @@
    "source": [
     "### 1. Init a Repo:\n",
     "\n",
-    "For testing purpose, let's use the sandbox environment of Zenodo (`ZenodoSandboxDeposit`)"
+    "As said, we use the testing interface, hence `sandbox=True`:"
    ]
   },
   {
@@ -55,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo = zenodo.ZenodoSandboxDeposit(None)"
+    "repo = zenodo.ZenodoRecord(None, sandbox=True)"
    ]
   },
   {
@@ -176,18 +180,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['tmp0.hdf', 'tmp0.jsonld']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m [f\u001b[38;5;241m.\u001b[39mname \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m repo\u001b[38;5;241m.\u001b[39mfiles]\n",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[0m [\u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m repo\u001b[38;5;241m.\u001b[39mfiles]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'name'"
+     ]
     }
    ],
    "source": [
-    "repo.get_filenames()"
+    "[f.name for f in repo.files]"
    ]
   },
   {
@@ -202,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fbf04793-b7eb-4377-a904-edb91542b056",
    "metadata": {},
    "outputs": [],
@@ -220,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "02290359-b13b-413d-9b93-9706b3ab087d",
    "metadata": {},
    "outputs": [],
@@ -238,23 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4e75f4fc-6311-470c-9204-93c1c5d768d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tmp0.txt\n",
-      "tmp0.hdf\n",
-      "tmp0.jsonld\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for file in repo.files:\n",
-    "    print(file.filename)"
+    "    print(file.name)"
    ]
   },
   {
@@ -282,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
