--- a/docs/colab/quickstart.ipynb
+++ b/docs/colab/quickstart.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install h5rdmtoolbox"
+    "# !pip install h5rdmtoolbox==1.4.0rc2"
    ]
   },
   {
